# alkye_assignment

./: .env.example  AI_USAGE.md  Cargo.toml  README.md  docker-compose.yml  rollout-2026-06-09T09-47-41-019eaa99-b84e-7ea2-9b17-078237de966b.jsonl
postgres/: init.sql
scripts/: test_api.sh
src/: entities.rs  main.rs  postgres.rs  repository.rs  router.rs
